fixed navigation issue on mobile

--- a/SRC/sass/components/_nav.scss
+++ b/SRC/sass/components/_nav.scss
@@ -1,4 +1,3 @@
-
 // Header
 
 #primary-header {
@@ -9,6 +8,14 @@
     position: relative;
     background-color: var(--clr-primary-gray);
     padding: 0 2em;
+    width: 100vw;
+    max-width: 100%;
+}
+
+@media (min-width: 2800px) {
+    #primary-header {
+        max-width: 2800px;
+    }
 }
 
 #nav-logo {
